# tlparser

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
.run/: digest (iot.json).run.xml  digest (requirements.json).run.xml
data/: spacewire.json
tests/: test_tlparser.py
tests/cli/: test_cli_basic.py  test_cli_digest.py
tests/data/: test.json
tests/logic/: test_case_data.py  test_stats.py  test_stats_ext.py
tlparser/: cli.py  config.py  formula_utils.py  spot_tools.py  stats.py  stats_ext.py  utils.py  viz.py
