[project]
name = "tlparser"
version = "0.1"
description = "Temporal Logic Parser"
readme = "README.md"
authors = [{name = "null"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "click",
    "pandas",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/RomanBoegli/tlparser"
Changelog = "https://github.com/RomanBoegli/tlparser/releases"
Issues = "https://github.com/RomanBoegli/tlparser/issues"
CI = "https://github.com/RomanBoegli/tlparser/actions"

[project.scripts]
tlparser = "tlparser.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
