[project]
name = "tlparser"
version = "0.1"
description = "Temporal Logic Parser"
readme = "README.md"
authors = [{name = "null"}]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "click",
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "kaleido",
    "D3Blocks==1.4.9",
    "setuptools",
    "pyModelChecking==1.3.3",
    "lark-parser==0.12.0",
    "openpyxl==3.1.5"
]

[project.urls]
Homepage = "https://github.com/ranonymousse/tlparser"
Changelog = "https://github.com/ranonymousse/tlparser/releases"
Issues = "https://github.com/ranonymousse/tlparser/issues"
CI = "https://github.com/ranonymousse/tlparser/actions"

[project.scripts]
tlparser = "tlparser.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages]
find = { include = ["tlparser"] }